// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Button Blue Text 1`] = `
<button
  onClick={[Function]}
  style={
    Object {
      "backgroundColor": "blue",
      "border": "none",
      "borderRadius": "50px",
      "boxShadow": "2px 2px 10px black",
      "color": "#f6eedf",
      "height": "45px",
      "margin": "20px",
      "outline": "none",
      "width": "200px",
    }
  }
>
  button text
</button>
`;

exports[`Storyshots Button Default 1`] = `
<button
  onClick={[Function]}
  style={
    Object {
      "backgroundColor": "#d63447",
      "border": "none",
      "borderRadius": "50px",
      "boxShadow": "2px 2px 10px black",
      "color": "#f6eedf",
      "height": "45px",
      "margin": "20px",
      "outline": "none",
      "width": "200px",
    }
  }
>
  button text
</button>
`;

exports[`Storyshots Footer Default 1`] = `
<div
  onMouseOver={[Function]}
  style={
    Object {
      "backgroundColor": "#ffd31d",
      "color": "black",
      "display": "flex",
      "fontFamily": "'Nunito', 'sans-serif'",
      "justifyContent": "space-around",
      "padding": "2% 5%",
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "flexDirection": "column",
      }
    }
  >
    <a
      href="google.com"
      style={
        Object {
          "color": "black",
          "textDecoration": "none",
        }
      }
    >
      sign up
    </a>
    <a
      href="google.com"
      style={
        Object {
          "color": "black",
          "textDecoration": "none",
        }
      }
    >
      contact
    </a>
    <a
      href="google.com"
      style={
        Object {
          "color": "black",
          "textDecoration": "none",
        }
      }
    >
      about
    </a>
  </div>
  <div
    style={
      Object {
        "alignItems": "center",
        "display": "flex",
        "flexDirection": "column",
        "justifyContent": "center",
      }
    }
  >
    <img
      alt="Main logo"
      src="./images/logo.png"
      style={
        Object {
          "height": "auto",
          "width": "70px",
        }
      }
    />
    <p>
      copyright flicks© 
      2020
    </p>
  </div>
  <div
    style={
      Object {
        "display": "flex",
        "flexDirection": "column",
        "justifyContent": "space-around",
      }
    }
  >
    <a
      href="facebook.com"
      style={
        Object {
          "color": "black",
          "fontSize": "120%",
          "textDecoration": "none",
        }
      }
    >
      <svg
        aria-hidden="true"
        className="svg-inline--fa fa-facebook-square fa-w-14 fa-lg "
        data-icon="facebook-square"
        data-prefix="fab"
        focusable="false"
        role="img"
        style={Object {}}
        viewBox="0 0 448 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M400 32H48A48 48 0 0 0 0 80v352a48 48 0 0 0 48 48h137.25V327.69h-63V256h63v-54.64c0-62.15 37-96.48 93.67-96.48 27.14 0 55.52 4.84 55.52 4.84v61h-31.27c-30.81 0-40.42 19.12-40.42 38.73V256h68.78l-11 71.69h-57.78V480H400a48 48 0 0 0 48-48V80a48 48 0 0 0-48-48z"
          fill="currentColor"
          style={Object {}}
        />
      </svg>
    </a>
    <a
      href="snapchat.com"
      style={
        Object {
          "color": "black",
          "fontSize": "120%",
          "textDecoration": "none",
        }
      }
    >
      <svg
        aria-hidden="true"
        className="svg-inline--fa fa-snapchat-square fa-w-14 fa-lg "
        data-icon="snapchat-square"
        data-prefix="fab"
        focusable="false"
        role="img"
        style={Object {}}
        viewBox="0 0 448 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M400 32H48C21.5 32 0 53.5 0 80v352c0 26.5 21.5 48 48 48h352c26.5 0 48-21.5 48-48V80c0-26.5-21.5-48-48-48zm-6.5 314.9c-3.5 8.1-18.1 14-44.8 18.2-1.4 1.9-2.5 9.8-4.3 15.9-1.1 3.7-3.7 5.9-8.1 5.9h-.2c-6.2 0-12.8-2.9-25.8-2.9-17.6 0-23.7 4-37.4 13.7-14.5 10.3-28.4 19.1-49.2 18.2-21 1.6-38.6-11.2-48.5-18.2-13.8-9.7-19.8-13.7-37.4-13.7-12.5 0-20.4 3.1-25.8 3.1-5.4 0-7.5-3.3-8.3-6-1.8-6.1-2.9-14.1-4.3-16-13.8-2.1-44.8-7.5-45.5-21.4-.2-3.6 2.3-6.8 5.9-7.4 46.3-7.6 67.1-55.1 68-57.1 0-.1.1-.2.2-.3 2.5-5 3-9.2 1.6-12.5-3.4-7.9-17.9-10.7-24-13.2-15.8-6.2-18-13.4-17-18.3 1.6-8.5 14.4-13.8 21.9-10.3 5.9 2.8 11.2 4.2 15.7 4.2 3.3 0 5.5-.8 6.6-1.4-1.4-23.9-4.7-58 3.8-77.1C159.1 100 206.7 96 220.7 96c.6 0 6.1-.1 6.7-.1 34.7 0 68 17.8 84.3 54.3 8.5 19.1 5.2 53.1 3.8 77.1 1.1.6 2.9 1.3 5.7 1.4 4.3-.2 9.2-1.6 14.7-4.2 4-1.9 9.6-1.6 13.6 0 6.3 2.3 10.3 6.8 10.4 11.9.1 6.5-5.7 12.1-17.2 16.6-1.4.6-3.1 1.1-4.9 1.7-6.5 2.1-16.4 5.2-19 11.5-1.4 3.3-.8 7.5 1.6 12.5.1.1.1.2.2.3.9 2 21.7 49.5 68 57.1 4 1 7.1 5.5 4.9 10.8z"
          fill="currentColor"
          style={Object {}}
        />
      </svg>
    </a>
    <a
      href="twitter.com"
      style={
        Object {
          "color": "black",
          "fontSize": "120%",
          "textDecoration": "none",
        }
      }
    >
      <svg
        aria-hidden="true"
        className="svg-inline--fa fa-twitter-square fa-w-14 fa-lg "
        data-icon="twitter-square"
        data-prefix="fab"
        focusable="false"
        role="img"
        style={Object {}}
        viewBox="0 0 448 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M400 32H48C21.5 32 0 53.5 0 80v352c0 26.5 21.5 48 48 48h352c26.5 0 48-21.5 48-48V80c0-26.5-21.5-48-48-48zm-48.9 158.8c.2 2.8.2 5.7.2 8.5 0 86.7-66 186.6-186.6 186.6-37.2 0-71.7-10.8-100.7-29.4 5.3.6 10.4.8 15.8.8 30.7 0 58.9-10.4 81.4-28-28.8-.6-53-19.5-61.3-45.5 10.1 1.5 19.2 1.5 29.6-1.2-30-6.1-52.5-32.5-52.5-64.4v-.8c8.7 4.9 18.9 7.9 29.6 8.3a65.447 65.447 0 0 1-29.2-54.6c0-12.2 3.2-23.4 8.9-33.1 32.3 39.8 80.8 65.8 135.2 68.6-9.3-44.5 24-80.6 64-80.6 18.9 0 35.9 7.9 47.9 20.7 14.8-2.8 29-8.3 41.6-15.8-4.9 15.2-15.2 28-28.8 36.1 13.2-1.4 26-5.1 37.8-10.2-8.9 13.1-20.1 24.7-32.9 34z"
          fill="currentColor"
          style={Object {}}
        />
      </svg>
    </a>
  </div>
</div>
`;

exports[`Storyshots Task Archived 1`] = `
<div
  className="list-item TASK_ARCHIVED"
>
  <label
    className="checkbox"
  >
    <input
      defaultChecked={true}
      disabled={true}
      name="checked"
      type="checkbox"
    />
    <span
      className="checkbox-custom"
      onClick={[Function]}
    />
  </label>
  <div
    className="title"
  >
    <input
      placeholder="Input title"
      readOnly={true}
      type="text"
      value="Test Task"
    />
  </div>
  <div
    className="actions"
    onClick={[Function]}
  />
</div>
`;

exports[`Storyshots Task Default 1`] = `
<div
  className="list-item TASK_INBOX"
>
  <label
    className="checkbox"
  >
    <input
      defaultChecked={false}
      disabled={true}
      name="checked"
      type="checkbox"
    />
    <span
      className="checkbox-custom"
      onClick={[Function]}
    />
  </label>
  <div
    className="title"
  >
    <input
      placeholder="Input title"
      readOnly={true}
      type="text"
      value="Test Task"
    />
  </div>
  <div
    className="actions"
    onClick={[Function]}
  >
    <a
      onClick={[Function]}
    >
      <span
        className="icon-star"
      />
    </a>
  </div>
</div>
`;

exports[`Storyshots Task Pinned 1`] = `
<div
  className="list-item TASK_PINNED"
>
  <label
    className="checkbox"
  >
    <input
      defaultChecked={false}
      disabled={true}
      name="checked"
      type="checkbox"
    />
    <span
      className="checkbox-custom"
      onClick={[Function]}
    />
  </label>
  <div
    className="title"
  >
    <input
      placeholder="Input title"
      readOnly={true}
      type="text"
      value="Test Task"
    />
  </div>
  <div
    className="actions"
    onClick={[Function]}
  >
    <a
      onClick={[Function]}
    >
      <span
        className="icon-star"
      />
    </a>
  </div>
</div>
`;
